[package]
name = "trajectory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bevy = "0.12.1"
bevy_rapier2d = "0.23.0"
lazy_static = "1.4.0"
noise = "0.8.2"


# good 
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
